--- a/projects/sample-app/src/app/app.component.html
+++ b/projects/sample-app/src/app/app.component.html
@@ -1,8 +1,8 @@
 <h1>Auth0 authentication sample app</h1>
 <nav>
   <ul>
-    <li><a routerLink="/" routerLinkActive="active">Home</a></li>
-    <li><a routerLink="/protected" routerLinkActive="active">Protected</a></li>
+    <li><a routerLink="/">Home</a></li>
+    <li><a routerLink="/protected">Protected</a></li>
   </ul>
 </nav>
 <router-outlet></router-outlet>
